[package]
name = "rust_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1.14.0", features = ["full"] }
sqlx = { version="0.5.10", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "json"] }
chrono = "0.4.19"
uuid = { version="0.8.2", features = ["serde", "v4"] }
async-trait = "0.1.52"
serde = { version="1.0.13", features = ["derive"] }
thiserror = "1.0.30"
anyhow = "1.0.5"
ulid = { version="0.5", features = ["uuid"] }
futures = "0.3"
rand = "*"